# pulseaudio-modules-nemo

./: .gitignore  README  bootstrap.sh  configure.ac
debian/: api  changelog  control  copyright  pulseaudio-module-meego-common-dev.install  pulseaudio-module-meego-common.install  pulseaudio-module-meego-parameters.install  pulseaudio-module-meego-sidetone.install  rules
rpm/: pulseaudio-modules-nemo.changes  pulseaudio-modules-nemo.spec  pulseaudio-modules-nemo.yaml
src/: Makefile.am
src/cmtspeech/: Makefile.am  cmtspeech-connection.c  cmtspeech-connection.h  cmtspeech-dbus.c  cmtspeech-dbus.h  cmtspeech-mainloop-handler.c  cmtspeech-mainloop-handler.h  cmtspeech-sink-input.c  cmtspeech-sink-input.h  cmtspeech-source-output.c  cmtspeech-source-output.h  module-meego-cmtspeech-symdef.h  module-meego-cmtspeech.c  module-meego-cmtspeech.h
src/common/: Makefile-rvct  Makefile-rvct-hardfp  Makefile.am  algorithm-base.c  algorithm-base.h  algorithm-hook.c  algorithm-hook.h  call-state-tracker.c  libmeego-common.pc.in  memory.c  memory.h  optimized.c  optimized.h  pa-optimized.c  pa-optimized.h  parameter-hook-implementor.h  parameter-hook.c  parameter-hook.h  parameter-modifier.h  proplist-meego.h  shared-data.c  src-16-to-48.c  src-16-to-48.h  src-48-to-16.c  src-48-to-16.h  src-48-to-8.c  src-8-to-48.c  src-8-to-48.h  tests.c  testsrc.c  volume-proxy.c
src/common/include/meego/: algorithm-base.h  algorithm-hook.h  call-state-tracker.h  optimized.h  parameter-hook-implementor.h  parameter-hook.h  parameter-modifier.h  proplist-nemo.h  shared-data.h  src-16-to-48.h  src-48-to-8.h  volume-proxy.h
src/mainvolume/: Makefile.am  listening-watchdog.c  listening-watchdog.h  mainvolume.c  mainvolume.h  module-meego-mainvolume-symdef.h  module-meego-mainvolume.c
src/mainvolume/tests/: Makefile.am  check_mainvolume.c  mainvolume-dbus-test.py  mainvolume-monitor.py  volume.py
src/music/: Makefile.am  module-meego-music-symdef.h  module-meego-music.c  module-music-api.h
src/parameters/: Makefile.am  module-meego-parameters-symdef.h  module-meego-parameters-userdata.h  module-meego-parameters.c  parameters.c  parameters.h
src/parameters/testmodule/: Makefile.am  README.txt  generate_testdata.py  module-meego-test-parameters-symdef.h  module-meego-test-parameters.c  parameter-test.pa  run-tests.sh  start-pa.sh
src/record/: Makefile.am  module-meego-record-symdef.h  module-meego-record.c  module-record-api.h
src/sidetone/: Makefile.am  alsa-util-old.c  alsa-util-old.h  alsa-utils.c  alsa-utils.h  ctrl-element.c  ctrl-element.h  module-meego-sidetone-symdef.h  module-meego-sidetone.c  sidetone-args.c  sidetone-args.h  sidetone.c  sidetone.h
src/sidetone/tests/: Makefile.am  check_sidetone.c
src/stream-restore-nemo/: Makefile.am  module-stream-restore-nemo-symdef.h  module-stream-restore-nemo.c  volume-proxy.c  volume-proxy.h
src/test/: Makefile.am  module-meego-test-symdef.h  module-meego-test.c
src/voice/: Makefile.am  module-meego-voice-symdef.h  module-meego-voice.c  module-voice-api.h  module-voice-userdata.h  voice-aep-ear-ref.h  voice-aep-sink-input.c  voice-aep-sink-input.h  voice-buffer.h  voice-convert.h  voice-hooks.h  voice-hw-sink-input.c  voice-hw-sink-input.h  voice-hw-sink-process.h  voice-hw-source-output.c  voice-hw-source-output.h  voice-mainloop-handler.c  voice-mainloop-handler.h  voice-optimized.c  voice-optimized.h  voice-raw-sink.c  voice-raw-sink.h  voice-raw-source.c  voice-raw-source.h  voice-util.c  voice-util.h  voice-voip-sink.c  voice-voip-sink.h  voice-voip-source.c  voice-voip-source.h
